--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -18,7 +18,10 @@
   <p *ngIf="control.errors?.min" class="text-red-400">
     Value too low.
   </p>
-  <p *ngIf="control.errors?.max" class="text-red-400">
-    Value too high.
+  <p *ngIf="control.errors?.noMatch" class="text-red-400">
+    Passwords do not match.
+  </p>
+  <p *ngIf="control.errors?.emailTaken" class="text-red-400">
+    Email Taken. Please try with a different email address.
   </p>
 </ng-container>
