--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
         <ng-template #authLinks>
           <li>
             <a class="px-2" routerLink="/manage" [routerLinkActiveOptions]="{exact: true}"
-              routerLinkActive="text-indigo-400">Manage</a>
+              routerLinkActive="text-indigo-400" [queryParams]="{ sort: '1' }">Manage</a>
           </li>
           <li>
             <a class="px-2" routerLink="/upload" [routerLinkActiveOptions]="{exact: true}"
