--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,12 +12,10 @@
         </li>
         <ng-template #authLinks>
           <li>
-            <a class="px-2" routerLink="/manage" [routerLinkActiveOptions]="{exact: true}"
-              routerLinkActive="text-indigo-400" [queryParams]="{ sort: '1' }">Manage</a>
+            <a class="px-2" routerLink="/manage" routerLinkActive="text-indigo-400">Manage</a>
           </li>
           <li>
-            <a class="px-2" routerLink="/upload" [routerLinkActiveOptions]="{exact: true}"
-              routerLinkActive="text-indigo-400">Upload</a>
+            <a class="px-2" routerLink="/upload" routerLinkActive="text-indigo-400">Upload</a>
           </li>
           <li>
             <a class="px-2" href="#" (click)="auth.logout($event)">Logout</a>
