--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,5 +1,5 @@
 <!-- Auth Modal -->
-<div class="fixed z-50 inset-0 overflow-y-auto" id="modal" [ngClass]="{ hidden: !modalService.isModalOpen(modalId) }">
+<div class="fixed z-50 inset-0 overflow-y-auto" id="modal" [ngClass]="{ hidden: !modal.isModalOpen(modalId) }">
   <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center 
       sm:block sm:p-0">
     <!-- Modal BG Overlay -->
@@ -18,14 +18,14 @@
         <!--Title-->
         <div class="flex justify-between items-center pb-4">
           <ng-content select="[heading]"></ng-content>
+
           <!-- Modal Close Button -->
           <div class="modal-close cursor-pointer z-50" (click)="closeModal()">
             &#x2715;
           </div>
         </div>
 
-        <ng-content>
-        </ng-content>
+        <ng-content></ng-content>
       </div>
     </div>
   </div>
