--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -1,5 +1,5 @@
   <!-- Edit Modal -->
-  <app-modal modalID="editClip">
+  <app-modal modalId="editClip">
     <p class="text-2xl font-bold">Edit Video</p>
 
     <app-alert *ngIf="showAlert" [color]="alertColor">
