--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
             <a class="px-2" routerLink="/upload" routerLinkActive="text-indigo-400">Upload</a>
           </li>
           <li>
-            <a class="px-2" href="#" (click)="auth.logout($event)">Logout</a>
+            <a class="px-2" routerLink="/" (click)="auth.logout($event)">Logout</a>
           </li>
         </ng-template>
         <li routerLinkActive="text-indigo-400">
